# bustail_core

./: .gitignore  .gitmodules  Dockerfile  README.md  application.py  crypt.py  docker-compose.prod.yml  docker-compose.yml  fixtures.py  nginx.conf  nginx_config.conf  pyproject.toml
.circleci/: config.yml
accounts/: crud.py  enums.py  logic.py  models.py  schemas.py  serializer.py  service.py  settings.py  views.py
alembic/: env.py
app/: application.py  docker-compose.yml  pyproject.toml
app/alembic/: env.py
app/api/: api.py
app/api/endpoints/: accounts.py  login.py
app/auth/: deps.py  security.py
app/core/: config.py
app/crud/: account.py  base.py
app/db/: base.py  database.py
app/enums/: __init__.py  permissions.py  roles.py
app/models/: account.py
app/schemas/: account.py
app/sqlalchemy_roles_and_permissions/: fixtures.py  schemas.py  utils.py
app/sqlalchemy_roles_and_permissions/crud/: crud_account_role.py  crud_permission.py  crud_role.py  crud_role_pemission.py
app/sqlalchemy_roles_and_permissions/models/: permissions.py  roles.py
applications/: enums.py  logic.py  models.py  schemas.py  serializer.py  service.py
authorization/: crud.py  models.py  schemas.py  settings.py  utils.py
backend/: Dockerfile  aerich.ini  application.py  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
backend/accounts/: __init__.py  crud.py  enums.py  models.py  routers.py  schemas.py  views.py
backend/alembic/: env.py
backend/applications/: __init__.py  crud.py  enums.py  models.py  routers.py  schemas.py  serializer.py  tasks.py  views.py
backend/auth/: routers.py  utils.py
backend/common/: __init__.py  crud.py  deps.py  enums.py  models.py  responses.py  routers.py  schemas.py  serializer.py  utils.py
backend/core/: application.py  config.py  urls.py
backend/db/: base.py  database.py
backend/drivers/: __init__.py  crud.py  enums.py  models.py  routers.py  schemas.py  serializer.py  views.py
backend/enums/: applications.py  mailing.py
backend/mailing/: __init__.py  crud.py  models.py  routers.py  schemas.py  sender.py  service.py  settings.py  task_template.py  views.py
backend/mailing/templates/: base.html  change_password.html  welcome.html
backend/notifications/: __init__.py  crud.py  enums.py  models.py  routers.py  schemas.py  views.py
backend/redis/: service.py
backend/schemas/: accounts.py  applications.py  drivers.py  mailing.py  notifications.py
backend/static/: cities.csv
backend/tests/: data.py  test_accounts.py  test_applications.py  test_drivers.py  test_notifications.py
clients/: crud.py  logic.py  models.py  schemas.py  service.py  views.py
common/: crud.py  schemas.py  service.py
db/: base.py  crud.py  database.py  enum.py  models.py  schemas.py  settings.py
db/alembic/: env.py
drivers/: enum.py  logic.py  models.py  schemas.py  serializer.py  service.py
env_files/: accounts.env.example  global.env.example  mailing.env.example  postgres.env.example  redis.env.example
frontend/: .eslintcache  Dockerfile  Dockerfile.dev  Dockerfile.prod  package.json
frontend/src/: App.js
mailing/: Dockerfile  pyproject.toml
mailing/src/: enums.py  errors.py  responses.py  routers.py  sender.py
mailing/src/core/: application.py  config.py
migrations/: env.py
migrations/versions/: 0d35254defcd_hello.py  3b312cb82652_hello.py  42d87da4fa86_hello.py  5599e49e9b01_hello.py  97f39228ebb1_hello.py  c72e56a50681_hello3.py  e83287861c0f_hello.py  ec52a1b0cff9_hello.py
notifications/: enums.py  logic.py  models.py  schemas.py  service.py
routers/: accounts.py  applications.py  auth.py  clients.py  drivers.py  notifications.py  persons.py
